fix: gander not showing up

--- a/src/index.scss
+++ b/src/index.scss
@@ -220,8 +220,8 @@ button {
   box-shadow: 0 1px 10px 2px hsl(0deg 0% 69% / 40%);
   opacity: 0;
   transition: opacity 2s ease;
-
-  .shown {
-    opacity: 1;
-  }
+}
+.show {
+  opacity: 1 !important;
+  transition: opacity 2s ease;
 }
